Endret til fungerende pom-fil